
	*WikiBackup.php: Added default value for $wgEnableBackupMagic to stop fatal error when variable is called for.
	*WikiBackup.php (fnArticleViewHeader): Changed reference to $user to global $wgUser; fixed typo in Database::fetchObject.
	*WikiBackup.php (fnArticleViewHeader): Fixed method of retrieving database info, since Database::fetchObject returns an object, not a string.

	*WikiBackup_body.php (WikiBackup.execInBackground): Fixed unclosed comment that holds documentation info.

	*WikiBackup.i18n.php: Added closing parentheses to "en" array.

	*DumpDatabase.php: Fixed array references to $argv. It does not seem to be complying with PHP documentation.
	*DumpDatabase.php: Simplified checks for unset default variables.
	*DumpDatabase.php: Moved setting of $timestamp up so it can be used by the first mysql query.
	*DumpDatabase.php: Changed popen to proc_open (that was how it was supposed to be), and put working directory into proc_open() instead of using chdir().
	*DumpDatabase.php: Added missing quotation marks around 'r' in the $descriptorspec array.
	*DumpDatabase.php: Added an end of file check to the while loop as a sanity check if fgets returns false unexpectedly for some reason.

2008-07-14 Tyler Romeo

	Changed format of database dump script to use maintenance/commandLine.inc.

	*WikiBackup_body.php (WikiBackup.execute): Removed parameters contained global MediaWiki variables and messages.

	*DumpDatabase.php: Added require for $IP/maintenance/commandLine.inc.
	*DumpDatabase.php: Reduced number of server arguments and fixed variable check for $wgBackupSleepTime.
	*DumpDatabase.php: Changed all database queries to use Database class.
	*DumpDatabase.php: Changed standard mail() function to use the UserMailer class.

	Changed last backup column name in user table to include "user_" prefix".

	*WikiBackup.php (fnArticleViewHeader): Changed queried field from lastbackup to user_lastbackup.