@@ -5,13 +5,14 @@
 	*WikiBackup.php: Added default value for $wgEnableBackupMagic to stop fatal error when variable is called for.
 	*WikiBackup.php (fnArticleViewHeader): Changed reference to $user to global $wgUser; fixed typo in Database::fetchObject.
 	*WikiBackup.php (fnArticleViewHeader): Fixed method of retrieving database info, since Database::fetchObject returns an object, not a string.
+	*WikiBackup.php: Changed configuration variable check to use ternary operators in order to simplify code.
 
 	*WikiBackup_body.php (WikiBackup.execInBackground): Fixed unclosed comment that holds documentation info.
 
 	*WikiBackup.i18n.php: Added closing parentheses to "en" array.
 
 	*DumpDatabase.php: Fixed array references to $argv. It does not seem to be complying with PHP documentation.
-	*DumpDatabase.php: Simplified checks for unset default variables.
+	*DumpDatabase.php: Changed configuration variable check to use ternary operators in order to simplify code.
 	*DumpDatabase.php: Moved setting of $timestamp up so it can be used by the first mysql query.
 	*DumpDatabase.php: Changed popen to proc_open (that was how it was supposed to be), and put working directory into proc_open() instead of using chdir().
 	*DumpDatabase.php: Added missing quotation marks around 'r' in the $descriptorspec array.
